# hsautomation

./: README.md  pyproject.toml
csv_download/: گزارش وضعیت موجودی.csv
src/hsautomation/: __init__.py  automation.py  bandleader.py  urls.py
tests/: test_hsadmin.py
tests/cassettes/: test_download_csv.yaml  test_report_page.yaml
