[project]
name = "hsautomation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Diaco Soltanpour", email = "dyaco8464@yahoo.com" }
]
dependencies = [
    "selenium>=4.19.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hsautomation"]
